--- a/src/app/pages/main/home/home.page.html
+++ b/src/app/pages/main/home/home.page.html
@@ -48,7 +48,7 @@
 
   </div>
 
-  <!-- Modal de opciones -->
+  <!-- Options Modal -->
   <ion-modal [isOpen]="isModalOpen" (didDismiss)="closeModal()">
     <ng-template>
       <div class="modal-content">
@@ -59,6 +59,9 @@
           <ion-button color="primary" expand="block" shape="round" (click)="goToMessages()">
             <ion-icon name="chatbubbles-outline" slot="start"></ion-icon>
             Messages
+            <ion-badge *ngIf="unreadCount > 0" color="danger" class="notification-badge">
+              {{ unreadCount }}
+            </ion-badge>
           </ion-button>
 
           <ion-button color="tertiary" expand="block" shape="round" (click)="goToNotices()">
