modificando el chat

--- a/src/app/pages/main/messages/messages.page.scss
+++ b/src/app/pages/main/messages/messages.page.scss
@@ -27,6 +27,7 @@
   .admin-details {
     margin-left: 12px;
     
+    
     h3 {
       margin: 0;
       font-weight: 600;
@@ -57,7 +58,7 @@
     
     .message-content {
       background: var(--ion-color-primary);
-      color: white;
+      color: rgb(214, 215, 229);
       border-radius: 18px 18px 4px 18px;
     }
   }
